--- a/src/Calculator/Views/CalculatorScientificOperators.xaml
+++ b/src/Calculator/Views/CalculatorScientificOperators.xaml
@@ -963,7 +963,7 @@
                 </Grid.RowDefinitions>
                 <controls:CalculatorButton x:Name="squareRootButton"
                                            x:Uid="squareRootButton"
-                                           Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
+                                           Style="{StaticResource EmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="squareRootButton"
                                            ButtonId="Sqrt"
                                            Click="shiftButton_Uncheck"
@@ -971,7 +971,7 @@
                 <controls:CalculatorButton x:Name="cubeRootButton"
                                            x:Uid="cubeRootButton"
                                            Grid.Row="1"
-                                           Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
+                                           Style="{StaticResource EmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="cubeRootButton"
                                            ButtonId="CubeRoot"
                                            Click="shiftButton_Uncheck"
@@ -979,7 +979,7 @@
                 <controls:CalculatorButton x:Name="ySquareRootButton"
                                            x:Uid="ySquareRootButton"
                                            Grid.Row="2"
-                                           Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
+                                           Style="{StaticResource EmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="ySquareRootButton"
                                            ButtonId="YRootX"
                                            Click="shiftButton_Uncheck"
@@ -987,7 +987,7 @@
                 <controls:CalculatorButton x:Name="twoPowerXButton"
                                            x:Uid="twoPowerXButton"
                                            Grid.Row="3"
-                                           Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
+                                           Style="{StaticResource EmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="twoPowerXButton"
                                            ButtonId="TwoPowerX"
                                            Click="shiftButton_Uncheck"
@@ -996,6 +996,7 @@
                                            x:Uid="logBaseX"
                                            Grid.Row="4"
                                            Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
+                                           Background="#99FFFFFF"
                                            AutomationProperties.AutomationId="logBaseX"
                                            ButtonId="LogBaseX"
                                            Click="shiftButton_Uncheck"
@@ -1003,7 +1004,7 @@
                 <controls:CalculatorButton x:Name="powerOfEButton"
                                            x:Uid="powerOfEButton"
                                            Grid.Row="5"
-                                           Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
+                                           Style="{StaticResource EmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="powerOfEButton"
                                            ButtonId="EPowerX"
                                            Click="shiftButton_Uncheck"
